...
    <string name="label_selected">• Selected</string>
    <string name="btn_go">Go</string>
    <string name="label_search_starting_point">Search starting point</string>
    <string name="exit">Exit</string>

    <string name="label_map_style">Map Style</string>
    <string name="map_standard" translatable="false">Standard</string>
    <string name="map_monochrome" translatable="false">Monochrome</string>
    <string name="map_hybrid" translatable="false">Hybrid</string>
    <string name="map_satellite" translatable="false">Satellite</string>
    <string name="map_style">Map style</string>
    <string name="label_not_tracking_your_activity">Not tracking your device location</string>
    <string name="label_start_tracking">Start Tracking</string>
    <string name="label_stop_tracking">Stop Tracking</string>
...
