...
                            android:layout_marginEnd="@dimen/dp_8"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/cl_location_icons"
                            app:layout_constraintTop_toTopOf="parent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edt_search_direction"
                                style="@style/SearchTextMedium"
                                android:layout_width="@dimen/dp_0"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="@dimen/dp_16"
                                android:background="@android:color/transparent"
                                android:ellipsize="end"
...
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cl_my_location" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_search_places_suggestion_direction"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:background="@color/color_f8f8f7"
                        android:overScrollMode="never"
                        app:layout_constraintTop_toBottomOf="@+id/cl_my_location" />
...
