<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_explore"
        android:icon="@drawable/ic_explore"
        android:title="@string/menu_navigate" />
    <item
        android:id="@+id/menu_tracking"
        android:icon="@drawable/ic_tracking"
        android:title="@string/menu_tracking" />
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_setting" />
    <item
        android:id="@+id/menu_more"
        android:icon="@drawable/ic_info"
        android:title="@string/menu_more" />
</menu>